[package]
authors = ["Wayne Nilsen <waynenilsen@gmail.com>"]
name = "handlebars-markdown-helper"
version = "0.1.2"
description = "A helper for handlebars that adds markdown rendering"
license = "MIT"
homepage = "https://github.com/waynenilsen/handlebars-markdown-helper"
readme = "README.md"
keywords = ["handlebars", "templating", "template", "markdown", "web"]

[dependencies]
handlebars = "0.11.3"
pulldown-cmark = "0.0.3"
